--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Matplotlib and pyplot\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Joanna Farris\n",
+    "\n",
+    "Github Repo: [https://github.com/Pojetta/module_03](https://github.com/Pojetta/module_03)\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -23,7 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Given the text below, create a bar plot (or a horizontal bar plot) that shows the frequency distribution of characters in the string. \n",
+    "## Question 1. \n",
+    "\n",
+    "Given the text below, create a bar plot (or a horizontal bar plot) that shows the frequency distribution of characters in the string. \n",
     "A dictionary has been created for you containing the characters and the frequencies of the characters.\n",
     "Make sure your bar plot has the bars labelled correctly (with the character it represents the frequency of).\n"
    ]
@@ -45,7 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Generate a sequence of at least 5 random numbers (integers are fine), and visualize the data using both `scatter` and `plot` on different axes.  You may use the index of the value as its x value in the plot."
+    "## Question 2. \n",
+    "\n",
+    "Generate a sequence of at least 5 random numbers (integers are fine), and visualize the data using both `scatter` and `plot` on different axes.  You may use the index of the value as its x value in the plot."
    ]
   },
   {
@@ -59,7 +65,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Do the same question as above, but change the syle and color of both the scatter and the plot."
+    "## Question 3. \n",
+    "\n",
+    "Do the same question as above, but change the syle and color of both the scatter and the plot."
    ]
   },
   {
@@ -73,7 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Given the data sets below, plot or scatter both on the same set of axes.  You are plotting the time it takes to execute a sorting algorithm on a list of a given size; your x axis should be the size, and the y axis is time.  Assume that `insertion_sort_times[i]` is how long it took to sort a list of length `sizes[i]`.  Add a legend to your plot showing which is insertion sort and which is merge sort.  Use the variable names to determine which data is which. "
+    "## Question 4. \n",
+    "\n",
+    "Given the data sets below, plot or scatter both on the same set of axes.  You are plotting the time it takes to execute a sorting algorithm on a list of a given size; your x axis should be the size, and the y axis is time.  Assume that `insertion_sort_times[i]` is how long it took to sort a list of length `sizes[i]`.  Add a legend to your plot showing which is insertion sort and which is merge sort.  Use the variable names to determine which data is which. "
    ]
   },
   {
@@ -90,7 +100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -104,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
