--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -34,20 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import Counter\n",
-    "TEXT = \"At three o’clock precisely I was at Baker Street, but Holmes had not yet returned. The landlady informed me that he had left the house shortly after eight o’clock in the morning. I sat down beside the fire, however, with the intention of awaiting him, however long he might be. I was already deeply interested in his inquiry, for, though it was surrounded by none of the grim and strange features which were associated with the two crimes which I have already recorded, still, the nature of the case and the exalted station of his client gave it a character of its own. Indeed, apart from the nature of the investigation which my friend had on hand, there was something in his masterly grasp of a situation, and his keen, incisive reasoning, which made it a pleasure to me to study his system of work, and to follow the quick, subtle methods by which he disentangled the most inextricable mysteries. So accustomed was I to his invariable success that the very possibility of his failing had ceased to enter into my head.\".lower()\n",
-    "letter_freq = dict(Counter(TEXT))\n",
-    "\n",
-    "# make a bar plot with an appropriate title, correct tick labels, and labeled axes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +49,12 @@
     }
    ],
    "source": [
+    "from collections import Counter\n",
+    "TEXT = \"At three o’clock precisely I was at Baker Street, but Holmes had not yet returned. The landlady informed me that he had left the house shortly after eight o’clock in the morning. I sat down beside the fire, however, with the intention of awaiting him, however long he might be. I was already deeply interested in his inquiry, for, though it was surrounded by none of the grim and strange features which were associated with the two crimes which I have already recorded, still, the nature of the case and the exalted station of his client gave it a character of its own. Indeed, apart from the nature of the investigation which my friend had on hand, there was something in his masterly grasp of a situation, and his keen, incisive reasoning, which made it a pleasure to me to study his system of work, and to follow the quick, subtle methods by which he disentangled the most inextricable mysteries. So accustomed was I to his invariable success that the very possibility of his failing had ceased to enter into my head.\".lower()\n",
+    "letter_freq = dict(Counter(TEXT))\n",
+    "\n",
+    "# make a bar plot with an appropriate title, correct tick labels, and labeled axes\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "sort = sorted(letter_freq.items())\n",
@@ -71,7 +64,7 @@
     "plt.xlabel('Character')\n",
     "plt.ylabel('Frequency')\n",
     "plt.title('Character Frequency Distribution')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -85,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +147,6 @@
     "import matplotlib.pyplot as plt\n",
     "import random\n",
     "\n",
-    "# Set seed for reproducibility\n",
     "random.seed(42)\n",
     "\n",
     "data = [random.randint(1, 20) for _ in range(50)]\n",
@@ -188,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
